tests/programs/errors/multi_immutable.tiny
let x: int = 1;
x = 2;
x = 3;
